--- a/scripts/verdaccio.yaml
+++ b/scripts/verdaccio.yaml
@@ -7,14 +7,14 @@
 #
 
 # path to a directory with all packages
-storage: ./.storage
+storage: ./storage
 
 auth:
   htpasswd:
     file: ./htpasswd
     # Maximum amount of users allowed to register, defaults to "+inf".
     # You can set this to -1 to disable registration.
-    #max_users: 1000
+    max_users: -1
 
 # a list of other known repositories we can talk to
 uplinks:
