--- a/lerna.json
+++ b/lerna.json
@@ -10,6 +10,9 @@
     "publish": {
       "conventionalCommits": true,
       "message": "ci(release): publish"
+    },
+    "bootstrap": {
+      "noCi": true 
     }
   },
   "version": "independent"
