--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "scripts": {
     "bootstrap:packages": "npx lerna bootstrap --scope \\@angular-builders\\/*",
-    "bootstrap:examples": "npx lerna exec npm install --ignore \\@angular-builders\\/*",
+    "bootstrap:examples": "npx lerna exec yarn install --ignore \\@angular-builders\\/*",
     "build:packages": "npx lerna run build --scope \\@angular-builders\\/*",
-    "ci": "npm run build:packages && ./scripts/run-ci.sh",
+    "ci": "yarn build:packages && ./scripts/run-ci.sh",
     "lerna": "lerna",
     "postbuild": "yarn test && yarn run e2e",
     "build": "tsc && ts-node merge-schemes.ts",
