--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "bootstrap:packages": "npx lerna bootstrap --scope \\@angular-builders\\/*",
-    "bootstrap:examples": "npx lerna exec yarn install --ignore \\@angular-builders\\/*",
+    "bootstrap:examples": "npx lerna exec --ignore \\@angular-builders\\/* -- yarn install --verbose",
     "build:packages": "npx lerna run build --scope \\@angular-builders\\/*",
     "ci": "yarn build:packages && ./scripts/run-ci.sh",
     "lerna": "lerna",
