--- a/packages/custom-webpack/examples/sanity-app/package.json
+++ b/packages/custom-webpack/examples/sanity-app/package.json
@@ -24,7 +24,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^8.4.0",
+    "@angular-builders/custom-webpack": "latest",
     "@angular-devkit/build-angular": "~0.900.0-rc.5",
     "@angular/cli": "^9.0.0-rc.5",
     "@angular/compiler-cli": "~9.0.0-rc.5",
